[workspace]
resolver = "2"
members = ["methods"]
exclude = ["lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.75" }

methods = { path = "./methods" }

risc0-build = { version = "1.0.2", features = ["docker"] }
risc0-zkvm = { version = "1.0.2", default-features = false }
risc0-zkp = { version = "1.0.2", default-features = false }

serde = { version = "1.0", features = ["derive", "std"] }

[profile.release]
debug = 1
lto = true
