[package]
name = "methods"
version = { workspace = true }
edition = { workspace = true }

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build = { workspace = true }
risc0-zkp = { workspace = true }

[dependencies]
# guest = { path = "guest" }
anyhow = { workspace = true }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }

ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1", features = ["rand_core"] }
rand = {version = "0.8", default-features = false, features = ["getrandom"]}

risc0-zkvm = { workspace = true, features = ["client"] }

tracing = "0.1"
tracing-subscriber = "0.3"
